@@ -6,8 +6,8 @@ import com.sbaars.adventofcode.year20.Day2020;
 import java.awt.*;
 import java.util.List;
 
-import static com.sbaars.adventofcode.common.Direction.EAST;
-import static com.sbaars.adventofcode.common.Direction.turnDegrees;
+import static com.sbaars.adventofcode.common.Direction.*;
+import static com.sbaars.adventofcode.util.DataMapper.readString;
 import static java.lang.Math.abs;
 import static java.util.stream.Collectors.toList;
 
@@ -36,7 +36,7 @@ public class Day12 extends Day2020 {
   }
 
   private List<Flight> convertInput() {
-    return dayStream().map(e -> new Flight(e.charAt(0), Integer.parseInt(e.substring(1)))).collect(toList());
+    return dayStream().map(e -> readString(e, "%c%i", Flight.class)).toList();
   }
 
   @Override
@@ -54,8 +54,5 @@ public class Day12 extends Day2020 {
     return abs(location.x) + abs(location.y);
   }
 
-  record Flight(char dir, int distance) {
-  }
-
-
+  public record Flight(char dir, int distance) {}
 }
